[package]
name = "solana-pumpfun"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
solana-sdk = "2.2.2"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
tokio = { version = "1.38", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
log = "0.4"
tonic = { version = "0.12.3", features = ["tls"] }
borsh = "1.5.7"
bs58 = "0.5"
solana-transaction-status = "2.1.16"
base64 = "0.22.1"
chrono = "0.4"
